syntax = "proto3";

option go_package = "./proto_gen";

// service server for worker server
service Worker {
    rpc AssignMapTask(AssignMapTaskReq) returns (Result);
    rpc AssignReduceTask(AssignReduceTaskReq) returns (Result);
    rpc End(Empty) returns (Empty);
    rpc Health(Empty) returns (HealthRes);
    rpc GetIMDFile(GetIMDFileReq) returns (GetIMDFileRes);
}

message GetIMDFileReq {
    string file_name = 1;
}

message GetIMDFileRes {
    repeated KeyValue key_values = 1;
}

message KeyValue {
    string key = 1;
    string value = 2;
}

message AssignMapTaskReq {
    repeated MapFileInfo file_info = 1;
}

message Result {
    string uuid = 1;
    bool result = 2;
}

message MapFileInfo {
    string file_name = 1;
    int64 from = 2;
    int64 to = 3;
}

message AssignReduceTaskReq {
    repeated ReduceFileInfo file_info = 1;
}

message ReduceFileInfo {
    string file_name = 1;
    string worker_ip = 2;
}

message Empty {}

message HealthRes {
    int64 status = 1;
}